src/test/contracts/negative/vars_consts/match.jsligo
type parameter =
| ["Add", int]
| ["Sub", int];

let main = ([action, store]: [parameter, int]) : int => {
  let store2 = match (action) {
    when(Add(n)): do { n = 42; return n; };
    when(Sub(n)): do { n = 42; return -n; };
  };
  return store2;
};
